--- a/Android Client/Clup/app/src/main/res/layout/fragment_code.xml
+++ b/Android Client/Clup/app/src/main/res/layout/fragment_code.xml
@@ -3,16 +3,17 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_code"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PhoneInputActivity">
+    tools:context=".ui.auth.PhoneFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/title_verify"
+            android:id="@+id/title_code"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/title_verify_number"
@@ -26,56 +27,69 @@
             app:layout_constraintVertical_bias="0.3" />
 
         <TextView
-            android:id="@+id/text_verify"
+            android:id="@+id/text_code"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="50dp"
-            android:text="@string/text_verify_code"
             android:textAlignment="center"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title_verify" />
+            app:layout_constraintTop_toBottomOf="@id/title_code" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/auth_code_text_input"
+            android:id="@+id/code_text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="100dp"
-            android:layout_marginEnd="100dp"
             android:layout_marginTop="50dp"
+            android:layout_marginEnd="100dp"
             app:boxBackgroundColor="@android:color/transparent"
+            app:errorEnabled="true"
             app:layout_constrainedWidth="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/text_verify">
+            app:layout_constraintTop_toBottomOf="@id/text_code">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/phone_number_edit_text"
+                android:id="@+id/code_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:focusableInTouchMode="true"
                 android:inputType="number"
                 android:textAlignment="center"
                 android:textStyle="bold" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/verify_button"
+            style="@style/MaterialRoundedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
-            android:layout_marginBottom="50dp"
-            android:background="@drawable/rounded_button"
-            android:paddingStart="60dp"
-            android:paddingEnd="60dp"
+            android:layout_marginBottom="10dp"
             android:text="@string/action_verify"
+            app:layout_constraintBottom_toTopOf="@id/retry_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/auth_code_text_input"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/code_text_input" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/retry_button"
+            style="@style/OutlinedMaterialRoundedButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="50dp"
+            android:text="@string/action_retry"
+            android:enabled="false"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/verify_button" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
