--- a/Android Client/Clup/app/src/main/res/layout/fragment_name.xml
+++ b/Android Client/Clup/app/src/main/res/layout/fragment_name.xml
@@ -13,10 +13,13 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/title_code"
+            android:id="@+id/title_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingStart="50dp"
+            android:paddingEnd="50dp"
             android:text="@string/title_welcome"
+            android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="30sp"
             android:textStyle="bold"
@@ -27,40 +30,39 @@
             app:layout_constraintVertical_bias="0.3" />
 
         <TextView
-            android:id="@+id/text_code"
-            android:layout_width="match_parent"
+            android:id="@+id/text_name"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="50dp"
             android:text="@string/text_choose_name"
             android:textAlignment="center"
             android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title_code" />
+            app:layout_constraintEnd_toEndOf="@id/title_name"
+            app:layout_constraintStart_toStartOf="@+id/title_name"
+            app:layout_constraintTop_toBottomOf="@id/title_name" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/code_text_input"
-            android:layout_width="match_parent"
+            android:id="@+id/name_text_input"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="100dp"
             android:layout_marginTop="50dp"
-            android:layout_marginEnd="100dp"
             app:boxBackgroundColor="@android:color/transparent"
             app:errorEnabled="true"
             app:layout_constrainedWidth="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/text_code">
+            app:layout_constraintTop_toBottomOf="@id/text_name">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/code_edit_text"
+                android:id="@+id/name_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:ems="10"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
                 android:inputType="text"
+                android:maxEms="10"
+                android:minEms="10"
                 android:textStyle="bold" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -72,11 +74,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:layout_marginBottom="50dp"
+            android:stateListAnimator="@null"
             android:text="@string/action_next"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/code_text_input" />
+            app:layout_constraintTop_toBottomOf="@id/name_text_input" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
