--- a/Android Client/Clup/app/src/main/res/layout/fragment_phone.xml
+++ b/Android Client/Clup/app/src/main/res/layout/fragment_phone.xml
@@ -13,10 +13,13 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/title_code"
+            android:id="@+id/title_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingStart="50dp"
+            android:paddingEnd="50dp"
             android:text="@string/title_insert_number"
+            android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="30sp"
             android:textStyle="bold"
@@ -27,66 +30,68 @@
             app:layout_constraintVertical_bias="0.3" />
 
         <TextView
-            android:id="@+id/text_code"
-            android:layout_width="match_parent"
+            android:id="@+id/text_phone"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="50dp"
             android:text="@string/text_verify_number"
             android:textAlignment="center"
             android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title_code" />
+            app:layout_constraintEnd_toEndOf="@id/title_phone"
+            app:layout_constraintStart_toStartOf="@id/title_phone"
+            app:layout_constraintTop_toBottomOf="@id/title_phone" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/prefix_text_input"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
             android:layout_marginEnd="5dp"
             app:boxBackgroundColor="@android:color/transparent"
             app:errorEnabled="true"
             app:layout_constrainedWidth="true"
-            app:layout_constraintBottom_toBottomOf="@+id/code_text_input"
-            app:layout_constraintEnd_toStartOf="@+id/code_text_input"
+            app:layout_constraintBottom_toBottomOf="@+id/phone_text_input"
+            app:layout_constraintEnd_toStartOf="@+id/phone_text_input"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/code_text_input"
+            app:layout_constraintTop_toTopOf="@+id/phone_text_input"
             app:prefixText="@string/text_prefix">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/prefix_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:ems="3"
                 android:inputType="phone"
+                android:maxEms="3"
+                android:minEms="3"
                 android:textStyle="bold" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/code_text_input"
-            android:layout_width="match_parent"
+            android:id="@+id/phone_text_input"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginTop="50dp"
-            android:layout_marginEnd="50dp"
             app:boxBackgroundColor="@android:color/transparent"
             app:errorEnabled="true"
             app:layout_constrainedWidth="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_weight="3"
             app:layout_constraintStart_toEndOf="@+id/prefix_text_input"
-            app:layout_constraintTop_toBottomOf="@id/text_code">
+            app:layout_constraintTop_toBottomOf="@id/text_phone">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/code_edit_text"
+                android:id="@+id/phone_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:ems="10"
                 android:focusableInTouchMode="true"
                 android:inputType="phone"
+                android:maxEms="10"
+                android:minEms="10"
                 android:textStyle="bold" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -98,11 +103,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:layout_marginBottom="50dp"
+            android:stateListAnimator="@null"
             android:text="@string/action_next"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/code_text_input" />
+            app:layout_constraintTop_toBottomOf="@id/phone_text_input" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
