--- a/Android Client/Clup/app/src/main/res/drawable/splash_screen_background.xml
+++ b/Android Client/Clup/app/src/main/res/drawable/splash_screen_background.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
     android:opacity="opaque">
-    <item android:drawable="@color/lime_200" />
+    <item android:drawable="@color/splash_screen_background_color" />
     <item
-        android:drawable="@drawable/ic_logo"
+        android:drawable="@drawable/ic_splash_screen_foreground"
         android:gravity="center" />
 </layer-list>
