--- a/Android Client/Clup/app/src/main/res/layout/fragment_code.xml
+++ b/Android Client/Clup/app/src/main/res/layout/fragment_code.xml
@@ -6,6 +6,9 @@
     android:id="@+id/fragment_code"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:overScrollMode="never"
+    android:scrollbarThumbHorizontal="@null"
+    android:scrollbarThumbVertical="@null"
     tools:context=".ui.auth.CodeFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,7 +23,7 @@
             android:paddingEnd="50dp"
             android:text="@string/title_verify_number"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/title_color"
             android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -68,32 +71,32 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/verify_button"
-            style="@style/MaterialRoundedButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:layout_marginBottom="10dp"
-            android:stateListAnimator="@null"
-            android:text="@string/action_verify"
-            app:layout_constraintBottom_toTopOf="@id/retry_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/code_text_input" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/retry_button"
-            style="@style/OutlinedMaterialRoundedButton"
+            style="@style/FilledRoundButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="50dp"
-            android:enabled="false"
             android:stateListAnimator="@null"
-            android:text="@string/action_retry"
+            android:text="@string/action_verify"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/verify_button" />
+            app:layout_constraintTop_toBottomOf="@id/retry_button"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/retry_button"
+            style="@style/OutlinedRoundButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:enabled="false"
+            android:stateListAnimator="@null"
+            android:text="@string/action_retry"
+            app:layout_constraintBottom_toTopOf="@id/verify_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/code_text_input"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
