--- a/Android Client/Clup/app/src/main/res/layout/fragment_name.xml
+++ b/Android Client/Clup/app/src/main/res/layout/fragment_name.xml
@@ -6,6 +6,9 @@
     android:id="@+id/fragment_name"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:overScrollMode="never"
+    android:scrollbarThumbHorizontal="@null"
+    android:scrollbarThumbVertical="@null"
     tools:context=".ui.auth.NameFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,7 +23,7 @@
             android:paddingEnd="50dp"
             android:text="@string/title_welcome"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/title_color"
             android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -69,12 +72,11 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/next_button"
-            style="@style/MaterialRoundedButton"
+            style="@style/FilledRoundButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:layout_marginBottom="50dp"
-            android:stateListAnimator="@null"
             android:text="@string/action_next"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
