--- a/Android Client/Clup/app/src/main/res/layout/fragment_success.xml
+++ b/Android Client/Clup/app/src/main/res/layout/fragment_success.xml
@@ -7,16 +7,14 @@
     android:layout_height="match_parent"
     tools:context=".ui.auth.SuccessFragment">
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SUCCESS"
-        android:textColor="@android:color/holo_green_light"
-        android:textSize="50sp"
-        android:textStyle="bold"
+        android:src="@drawable/ic_circle_check"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="TODO" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
