--- a/Android Client/Clup/app/src/main/res/values/colors.xml
+++ b/Android Client/Clup/app/src/main/res/values/colors.xml
@@ -3,9 +3,28 @@
     <color name="lime_200">#FFCAFFE7</color>
     <color name="lime_500">#FF97FFCF</color>
     <color name="lime_700">#FF64FFB7</color>
+    <color name="gray_400">#FFBBBBBB</color>
+    <color name="gray_700">#FF545454</color>
     <color name="gray_800">#FF2A2A2A</color>
     <color name="gray_900">#FF111111</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="disabled_color">#FFBBBBBB</color>
+
+    <color name="ic_check_color">@color/lime_700</color>
+
+    <color name="outlined_button_text_color">@color/gray_900</color>
+    <color name="outlined_button_text_color_disabled">@color/gray_400</color>
+    <color name="outlined_button_stroke_color">@color/lime_700</color>
+    <color name="outlined_button_stroke_color_disabled">@color/gray_400</color>
+
+    <color name="title_color">@color/black</color>
+
+    <color name="splash_screen_logo_color">@color/gray_900</color>
+    <color name="splash_screen_logo_background_color">@color/lime_500</color>
+    <color name="splash_screen_background_color">@color/white</color>
+
+    <color name="qr_code_on_color">@color/black</color>
+    <color name="qr_code_off_color">@color/white</color>
+
+    <color name="unknown">@android:color/holo_blue_bright</color> <!-- TODO remove this -->
 </resources>
