--- a/Android Client/Clup/app/src/main/res/layout/fragment_code.xml
+++ b/Android Client/Clup/app/src/main/res/layout/fragment_code.xml
@@ -72,7 +72,7 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/verify_button"
             style="@style/FilledRoundButton"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/rounded_button_width"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="50dp"
@@ -81,12 +81,12 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/retry_button"/>
+            app:layout_constraintTop_toBottomOf="@id/retry_button" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/retry_button"
             style="@style/OutlinedRoundButton"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/rounded_button_width"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
@@ -94,9 +94,9 @@
             android:stateListAnimator="@null"
             android:text="@string/action_retry"
             app:layout_constraintBottom_toTopOf="@id/verify_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/code_text_input"/>
+            app:layout_constraintEnd_toEndOf="@id/verify_button"
+            app:layout_constraintStart_toStartOf="@id/verify_button"
+            app:layout_constraintTop_toBottomOf="@id/code_text_input" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
