--- a/Android Client/Clup/app/src/main/res/layout/fragment_name.xml
+++ b/Android Client/Clup/app/src/main/res/layout/fragment_name.xml
@@ -17,15 +17,10 @@
 
         <TextView
             android:id="@+id/title_name"
+            style="@style/AppTheme.Clup.TitleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingStart="50dp"
-            android:paddingEnd="50dp"
             android:text="@string/title_welcome"
-            android:textAlignment="center"
-            android:textColor="@color/title_color"
-            android:textSize="30sp"
-            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -34,12 +29,11 @@
 
         <TextView
             android:id="@+id/text_name"
+            style="@style/AppTheme.Clup.SubtitleTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="@string/text_choose_name"
-            android:textAlignment="center"
-            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="@id/title_name"
             app:layout_constraintStart_toStartOf="@+id/title_name"
             app:layout_constraintTop_toBottomOf="@id/title_name" />
