--- a/Android Client/Clup/app/src/main/res/layout/fragment_phone.xml
+++ b/Android Client/Clup/app/src/main/res/layout/fragment_phone.xml
@@ -17,15 +17,10 @@
 
         <TextView
             android:id="@+id/title_phone"
+            style="@style/AppTheme.Clup.TitleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingStart="50dp"
-            android:paddingEnd="50dp"
             android:text="@string/title_insert_number"
-            android:textAlignment="center"
-            android:textColor="@color/title_color"
-            android:textSize="30sp"
-            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -34,12 +29,11 @@
 
         <TextView
             android:id="@+id/text_phone"
+            style="@style/AppTheme.Clup.SubtitleTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="@string/text_verify_number"
-            android:textAlignment="center"
-            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="@id/title_phone"
             app:layout_constraintStart_toStartOf="@id/title_phone"
             app:layout_constraintTop_toBottomOf="@id/title_phone" />
@@ -108,7 +102,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:layout_marginBottom="50dp"
-            android:stateListAnimator="@null"
             android:text="@string/action_next"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
