--- a/Android Client/Clup/app/src/main/res/values/dimen.xml
+++ b/Android Client/Clup/app/src/main/res/values/dimen.xml
@@ -6,4 +6,8 @@
     <dimen name="rounded_button_stroke_width">2dp</dimen>
 
     <dimen name="alert_dialog_corner_radius">10dp</dimen>
+
+    <dimen name="title_text_view_horizontal_padding">20dp</dimen>
+    <dimen name="title_text_view_text_size">30sp</dimen>
+    <dimen name="subtitle_text_view_text_size">20sp</dimen>
 </resources>
