--- a/Android Client/Clup/app/src/main/res/values-night-v23/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values-night-v23/themes.xml
@@ -1,5 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <!-- BASE APPLICATION THEME -->
     <style name="AppTheme.Clup" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/lime_500</item>
@@ -13,6 +13,7 @@
 
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
 
+        <item name="android:windowLightStatusBar">false</item>
         <item name="android:statusBarColor">?android:colorBackground</item>
 
         <item name="android:navigationBarColor">?android:colorBackground</item>
@@ -21,20 +22,14 @@
     </style>
 
     <!-- SPLASH SCREEN THEME -->
-
     <style name="AppTheme.Clup.SplashScreenTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
 
+        <item name="android:windowLightStatusBar">false</item>
         <item name="android:statusBarColor">?android:colorBackground</item>
 
         <item name="android:navigationBarColor">?android:colorBackground</item>
 
         <item name="android:windowBackground">@drawable/splash_screen_background</item>
-    </style>
-
-    <!-- BUTTON FINAL THEMES -->
-
-    <style name="FilledRoundButton" parent="@style/AppTheme.Clup.MaterialRoundedButton">
-        <item name="rippleColor">@color/gray_800</item>
     </style>
 </resources>
