--- a/Android Client/Clup/app/src/main/res/values-night-v27/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values-night-v27/themes.xml
@@ -1,9 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <!-- BASE APPLICATION THEME -->
     <style name="AppTheme.Clup" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/lime_500</item>
-        <item name="colorPrimaryDark">@color/lime_500</item>
         <item name="colorPrimaryVariant">@color/gray_900</item>
         <item name="colorOnPrimary">@color/gray_900</item>
 
@@ -13,28 +12,25 @@
 
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
 
+        <item name="android:windowLightStatusBar">false</item>
         <item name="android:statusBarColor">?android:colorBackground</item>
 
+        <item name="android:windowLightNavigationBar">false</item>
         <item name="android:navigationBarColor">?android:colorBackground</item>
 
         <item name="windowActionModeOverlay">true</item>
     </style>
 
     <!-- SPLASH SCREEN THEME -->
-
     <style name="AppTheme.Clup.SplashScreenTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
 
+        <item name="android:windowLightStatusBar">false</item>
         <item name="android:statusBarColor">?android:colorBackground</item>
 
+        <item name="android:windowLightNavigationBar">false</item>
         <item name="android:navigationBarColor">?android:colorBackground</item>
 
         <item name="android:windowBackground">@drawable/splash_screen_background</item>
-    </style>
-
-    <!-- BUTTON FINAL THEMES -->
-
-    <style name="FilledRoundButton" parent="@style/AppTheme.Clup.MaterialRoundedButton">
-        <item name="rippleColor">@color/gray_800</item>
     </style>
 </resources>
