--- a/Android Client/Clup/app/src/main/res/values/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values/themes.xml
@@ -1,9 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-
     <!-- BASE APPLICATION THEME -->
     <style name="AppTheme.Clup" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-
         <item name="colorPrimary">@color/lime_700</item>
+        <item name="colorPrimaryDark">@color/lime_700</item>
         <item name="colorPrimaryVariant">@color/white</item>
         <item name="colorOnPrimary">@color/gray_900</item>
 
@@ -12,38 +11,28 @@
         <item name="colorOnSecondary">@color/unknown</item>
 
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:statusBarColor">@color/gray_legacy</item>
 
-        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
-        <item name="android:statusBarColor">?android:colorBackground</item>
-
-        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
-        <item name="android:navigationBarColor">?android:colorBackground</item>
+        <item name="android:navigationBarColor">@color/gray_legacy</item>
 
         <item name="windowActionModeOverlay">true</item>
     </style>
 
     <!-- SPLASH SCREEN THEME -->
-
     <style name="AppTheme.Clup.SplashScreenTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-
-        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
         <item name="android:statusBarColor">?android:colorBackground</item>
-
-        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">false</item>
         <item name="android:navigationBarColor">?android:colorBackground</item>
 
         <item name="android:windowBackground">@drawable/splash_screen_background</item>
     </style>
 
     <!-- TOOLBAR THEME -->
-
     <style name="AppTheme.Clup.MaterialToolbar" parent="Widget.MaterialComponents.Toolbar.Primary">
 
     </style>
 
     <!-- BUTTON BASE THEMES -->
-
     <style name="AppTheme.Clup.MaterialRoundedButton" parent="@style/Widget.MaterialComponents.Button">
         <item name="cornerRadius">@dimen/rounded_button_corner_radius</item>
 
@@ -68,7 +57,6 @@
     </style>
 
     <!-- BUTTON FINAL THEMES -->
-
     <style name="FilledRoundButton" parent="@style/AppTheme.Clup.MaterialRoundedButton">
         <item name="rippleColor">@color/white</item>
     </style>
@@ -79,7 +67,6 @@
     </style>
 
     <!-- ALERT DIALOG THEME -->
-
     <style name="AppTheme.RoundedAlertDialog" parent="Theme.MaterialComponents.DayNight.Dialog.Alert">
         <item name="cornerSize">@dimen/alert_dialog_corner_radius</item>
         <item name="android:dialogCornerRadius" tools:targetApi="p">
