--- a/Android Client/Clup/app/src/main/res/values-v27/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values-v27/themes.xml
@@ -1,17 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- BASE APPLICATION THEME -->
-    <style name="AppTheme.Clup" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/lime_700</item>
-        <item name="colorPrimaryDark">@color/lime_700</item>
-        <item name="colorPrimaryVariant">@color/white</item>
-        <item name="colorOnPrimary">@color/gray_900</item>
-
-        <item name="colorSecondary">@color/unknown</item>
-        <item name="colorSecondaryVariant">@color/unknown</item>
-        <item name="colorOnSecondary">@color/unknown</item>
-
+    <!-- MAIN ACTIVITY THEME -->
+    <style name="AppTheme.Clup.Main" parent="AppTheme.Clup">
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:windowTranslucentStatus">false</item>
 
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:statusBarColor">?android:colorBackground</item>
@@ -22,9 +14,24 @@
         <item name="windowActionModeOverlay">true</item>
     </style>
 
-    <!-- SPLASH SCREEN THEME -->
-    <style name="AppTheme.Clup.SplashScreenTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <!-- MAP ACTIVITY THEME -->
+    <style name="AppTheme.Clup.Map" parent="AppTheme.Clup">
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:windowTranslucentStatus">false</item>
+
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+
+        <item name="android:windowLightNavigationBar">true</item>
+        <item name="android:navigationBarColor">?android:colorBackground</item>
+
+        <item name="windowActionModeOverlay">true</item>
+    </style>
+
+    <!-- SPLASH SCREEN THEME -->
+    <style name="AppTheme.Clup.Splash" parent="AppTheme.Clup">
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:windowTranslucentStatus">false</item>
 
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:statusBarColor">?android:colorBackground</item>
