--- a/Android Client/Clup/app/src/main/res/values/dimen.xml
+++ b/Android Client/Clup/app/src/main/res/values/dimen.xml
@@ -10,4 +10,6 @@
     <dimen name="title_text_view_horizontal_padding">20dp</dimen>
     <dimen name="title_text_view_text_size">30sp</dimen>
     <dimen name="subtitle_text_view_text_size">20sp</dimen>
+
+    <dimen name="fab_margin_start">20dp</dimen>
 </resources>
