Added geolocation on the map, added bottom sheet to map activity

--- a/Android Client/Clup/app/src/main/res/layout/fragment_code.xml
+++ b/Android Client/Clup/app/src/main/res/layout/fragment_code.xml
@@ -65,7 +65,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/verify_button"
-            style="@style/FilledRoundButton"
+            style="@style/AppTheme.Clup.FilledRoundButton"
             android:layout_width="@dimen/rounded_button_width"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -78,7 +78,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/retry_button"
-            style="@style/OutlinedRoundButton"
+            style="@style/AppTheme.Clup.OutlinedRoundButton"
             android:layout_width="@dimen/rounded_button_width"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
