--- a/Android Client/Clup/app/src/main/res/values/dimen.xml
+++ b/Android Client/Clup/app/src/main/res/values/dimen.xml
@@ -11,5 +11,7 @@
     <dimen name="title_text_view_text_size">30sp</dimen>
     <dimen name="subtitle_text_view_text_size">20sp</dimen>
 
-    <dimen name="fab_margin_start">20dp</dimen>
+    <dimen name="mini_fab_margin_start">20dp</dimen>
+    <dimen name="fab_margin_end">10dp</dimen>
+    <dimen name="fab_margin_bottom">10dp</dimen>
 </resources>
